// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders correctly with calendar icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  ref={null}
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    ref={null}
    style={
      {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#3957D0"
      name="calendar"
      size={20}
    />
  </View>
  <View
    ref={null}
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTText
      darkGray={true}
      style={
        {
          "marginHorizontal": 8,
        }
      }
    >
      some text
    </RCTText>
  </View>
  <View
    ref={null}
    style={
      {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#0F853B"
      name="create"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`TextButton renders correctly with repeat icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  ref={null}
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    ref={null}
    style={
      {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#3957D0"
      name="repeat"
      size={20}
    />
  </View>
  <View
    ref={null}
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTText
      darkGray={true}
      style={
        {
          "marginHorizontal": 8,
        }
      }
    >
      some text
    </RCTText>
  </View>
  <View
    ref={null}
    style={
      {
        "width": 30,
      }
    }
  >
    <Ionicons
      color="#0F853B"
      name="create"
      size={20}
    />
  </View>
</TouchableOpacity>
`;
